# winarm-cpufeatures

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  justfile
.github/workflows/: ci.yml
contrib/compile-bench/: Cargo.toml
contrib/std_detect_patch/: README.md  aarch64.rs  dotnet10_arm_detection_reference.md
contrib/std_detect_patch/_check/: Cargo.toml
contrib/std_detect_patch/_check/src/: lib.rs
examples/: dump_features.rs  dump_features_full.rs  latency.rs
src/: cache.rs  detect.rs  features.rs  lib.rs
src/windows/: ipfp.rs  mod.rs  registry.rs  sys.rs
tests/: compile_fail.rs  hardware_assertions.rs  name_parity.rs  smoke.rs  sve_execution.rs
