[package]
name = "winarm-cpufeatures"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Imazen <support@imazen.io>"]
license = "MIT OR Apache-2.0"
description = "Fill the Windows-on-ARM gap in is_aarch64_feature_detected! — wires every PF_ARM_* constant from Windows SDK 26100, derives FEAT_RDM the same way .NET 10 does, and (optionally, behind the `registry` feature) reads the AArch64 ID-register snapshots Windows publishes in the registry to cover the ~33 names Microsoft has never exposed via IsProcessorFeaturePresent."
repository = "https://github.com/imazen/winarm-cpufeatures"
documentation = "https://docs.rs/winarm-cpufeatures"
readme = "README.md"
keywords = ["aarch64", "arm64", "cpu", "windows", "simd"]
categories = ["hardware-support", "no-std", "os::windows-apis"]

[lib]

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[features]
default = []
# Enable HKLM\…\CentralProcessor\0\CP <hex> registry reads for the ~33
# stdarch feature names Microsoft has never exposed via IsProcessorFeaturePresent
# (fhm, fcma, frintts, paca, pacg, bti, dpb/dpb2, mte, mops, dit, sb, ssbs,
# flagm/flagm2, rand, cssc, wfxt, hbc, sm4, rcpc2/rcpc3, pauth_lr, lse128,
# tme, ecv, lut, faminmax, fp8*, fpmr). Adds one RegOpenKeyExW + a handful
# of RegGetValueW calls on first probe; cached after that. Off by default —
# matches what .NET 10 / pytorch-cpuinfo / Microsoft's own Windows runtime ship.
registry = []
# Opt into `#![feature(stdarch_aarch64_feature_detection)]` so non-Windows
# aarch64 targets can detect the 32 stdarch feature names that are still
# unstable on Rust 1.85 (cssc, ecv, faminmax, flagm2, fp8*, hbc, lse128,
# lut, mops, pauth-lr, rcpc3, sme*, ssve-fp8*, sve2p1, sve-b16b16, wfxt,
# fpmr). Requires nightly rustc. On stable, those names report `false`
# from `is_aarch64_feature_detected_full!` on non-Windows targets — same as calling
# `is_aarch64_feature_detected!` directly without the unstable gate.
# Has no effect on Windows ARM64 (we don't delegate to stdarch there).
nightly-stdarch = []
# Enable the SVE execution test in `tests/sve_execution.rs`. Requires
# nightly rustc (for `aarch64_unstable_target_feature`).
nightly-sve = []
